ili2fme 5.4.2 (2011-08-xx)
---------------------------
- fixed: NullPointerException if filename without path
- check that xtf_class is a qualified interlis name (contains at least one '.')

ili2fme 5.4.1 (2011-08-03)
---------------------------
- ili2c-4.3.7
- fixed: failed to read ABSTRACT structures from ili

ili2fme 5.4.0 (2011-07-27)
---------------------------
- FME2011 FME Data Inspector provides multiple FME_GEOMETRY_HANDLING entries
- added FORMAT_TYPE JAVA to metafile as requested by SAFE
- added TOPICS_FILTER to filter reading by qualified ili topic name; seperate multiple names by semicolon
- completed GUI GROUP Parameters:

ili2fme 5.3.3 (2011-04-14)
---------------------------
- bug: Attribute URI missing in OIDSPACE
- bug: no error message if createReader() throws a Throwable
- iox-ili-1.5.5

ili2fme 5.3.2 (2011-01-26)
---------------------------
- java.lang.NoSuchMethodError: ch.interlis.ili2c.metamodel.Constant$Numeric.getValue()D
- iox-ili-1.5.4

ili2fme 5.3.1 (2011-01-17)
---------------------------
- ili2c-4.3.4

ili2fme 5.3.0 (2010-12-29)
---------------------------
- support http proxy (new params HTTP_PROXY_HOST, HTTP_PROXY_PORT)
- itf reader: skip/ignore missing 3rd value of a coord
- bug itf reader: skip space after 'CONT'
- reader: return exception to FME to enable error detection by FME
- ili2c-4.3.3
- iox-ili-1.5.3
- test result of ili1 polygon building (new param ILI1_CHECKCONVERT)
- new, not yet implemented, params CHECK_ATTRTYPE, CHECK_ATTRMULTIPLICITY

ili2fme 5.2.2 (2010-08-13)
---------------------------
- bug: coord1D read/written as fme_point; changed to ordinary fme attribute
- bug: superfluous log output to c:/tmp/ili2fme.log

ili2fme 5.2.1 (2010-03-17)
---------------------------
- suppress ili2c warnings
- added scripts to remove overlaps (contributed by Kt TG)
- bug: schema reader declares nested list attributes incorrectly
- bug: support reading/writing of embedded associations with attributes