@@ -1,7 +1,7 @@
-#Wed, 14 Sep 2011 08:54:59 +0200
+#Fri, 14 Oct 2011 14:06:53 +0200
 #Wed Feb 02 15:55:13 CET 2011
 versionMicro=2
 versionMinor=4
 versionBranch=
-versionDate=20110914
+versionDate=20111014
 versionMajor=5
